--- a/package.json
+++ b/package.json
@@ -1,54 +1,63 @@
 {
   "name": "gtm-brain-slack-bot",
   "version": "1.0.0",
-  "description": "Conversational Salesforce intelligence via Slack",
+  "description": "Elite GTM Intelligence Agent - Conversational Salesforce data assistant for Slack",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest --coverage",
+    "setup": "node setup.js",
+    "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --ci --maxWorkers=2",
+    "test:coverage": "jest --coverage",
     "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix"
+    "lint:fix": "eslint src/ --fix",
+    "test:connections": "node test-connection.js",
+    "docker:build": "docker build -t gtm-brain .",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "health": "curl -f http://localhost:3000/health"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "coverageDirectory": "coverage",
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/app.js",
-      "!**/node_modules/**"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 60,
-        "functions": 60,
-        "lines": 60,
-        "statements": 60
-      }
-    },
-    "testMatch": [
-      "**/__tests__/**/*.js",
-      "**/?(*.)+(spec|test).js"
-    ]
-  },
-  "keywords": ["salesforce", "slack", "ai", "gtm", "sales-intelligence"],
-  "author": "Eudia RevOps",
-  "license": "UNLICENSED",
+  "keywords": [
+    "salesforce",
+    "slack",
+    "gtm",
+    "sales",
+    "ai",
+    "bot"
+  ],
+  "author": "Your Company",
+  "license": "MIT",
   "dependencies": {
-    "@slack/bolt": "^3.14.0",
-    "express": "^4.18.2",
-    "jsforce": "^2.0.0-beta.25",
+    "@azure/identity": "^4.13.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@slack/bolt": "^3.17.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.5.0",
-    "exceljs": "^4.3.0",
-    "openai": "^4.11.1"
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "isomorphic-fetch": "^3.0.0",
+    "joi": "^17.11.0",
+    "jsforce": "^2.0.0-beta.28",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
+    "openai": "^4.20.1",
+    "redis": "^4.6.10",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
     "jest": "^29.7.0",
-    "eslint": "^8.57.1",
-    "nodemon": "^3.0.1",
-    "@types/jest": "^29.5.8"
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
