[FEATURE] Contract Ingestion System - PDF Analysis & Creation
MAJOR NEW CAPABILITY: Upload PDF contracts to GTM-Brain for automated analysis and Salesforce contract creation.

CONTRACT ANALYSIS ENGINE:
- PDF text extraction using pdf-parse library
- Contract type classification (CAB/LOI vs Recurring vs Amendment)
- Field extraction with regex patterns and NLP
- Account name fuzzy matching
- Signature extraction (Customer + Eudia signers)

CONTRACT TYPE RULES:
- CAB/LOI: NO monetary fields (Total/Annual/Monthly = null)
- Recurring: Full monetary field population
- Product line detection (Contracting, Insights, sigma, etc.)

SALESFORCE INTEGRATION:
- Creates Contract records with all ERP sync fields
- Attaches PDF as ContentVersion linked to Contract
- Account matching for AccountId lookup
- Contact matching for CustomerSignedId
- User matching for CompanySignedId (Omar, David)

FIELD MAPPING (Campfire ERP Sync):
- Contract_Name_Campfire__c (Contract Name)
- AccountId (Account lookup)
- StartDate, EndDate (Dates)
- ContractTerm (Months)
- Contract_Type__c (LOI/Recurring)
- Contract_Value__c (TCV - non-LOI only)
- Annualized_Revenue__c (ACV - non-LOI only)
- Amount__c (Monthly - non-LOI only)
- Parent_Product__c, Product_Line__c
- CustomerSignedId, CompanySignedId

SLACK INTEGRATION:
- Upload PDF via @gtm-brain mention or DM
- Shows extracted fields with confidence scores
- Confirmation before creation
- Owner override: 'create contract assign to Julie'
- Cancel option

FILES:
- src/services/contractAnalyzer.js (PDF parsing, extraction)
- src/services/contractCreation.js (Salesforce creation)
- src/slack/events.js (File handling integration)
- CONTRACT_INGESTION_SYSTEM.md (Documentation)
- test-contract-analysis.js (Validation tests)
- package.json (added pdf-parse dependency)

TESTED WITH:
- Coherent A&R Agreement (Recurring, 36mo)
- Pure Storage CAB (LOI, 12mo)
- Best Buy CAB (LOI, 12mo)
- Chevron Agreement (Recurring, 12mo, $1.2M)

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "openai": "^4.20.1",
+    "pdf-parse": "^1.1.1",
     "redis": "^4.6.10",
     "winston": "^3.11.0"
   },
