--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@slack/bolt": "^3.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "cookie-parser": "^1.4.6",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
