Team-ready Hyprnote sync with pre-configured users
- Added team registry with all 10 user IDs pre-configured
- Setup auto-detects user from Hyprnote email
- Ownership-based account matching (98% confidence for owned accounts)
- Improved note formatting (clean structure, no stray characters)
- Comprehensive test suite (60 tests passing)
- Team documentation (TEAM_SETUP.md)

Ready for distribution to: Julie, Justin, Asad, Himanshu, Ananth, Olivia, Jon, Zack, Omar, David

--- a/hyprnote-sync/package.json
+++ b/hyprnote-sync/package.json
@@ -1,12 +1,15 @@
 {
   "name": "hyprnote-salesforce-sync",
-  "version": "1.0.0",
-  "description": "Sync Hyprnote meeting notes to Salesforce",
+  "version": "1.1.0",
+  "description": "Sync Hyprnote meeting notes to Salesforce - Eudia Team Edition",
   "main": "sync.js",
   "scripts": {
-    "setup": "node setup.js",
+    "setup": "node setup-quick.js",
+    "setup:manual": "node setup.js",
     "sync": "node sync.js",
-    "status": "node sync.js --status"
+    "status": "node sync.js --status",
+    "test": "node test-comprehensive.js",
+    "test:advanced": "node test-advanced.js"
   },
   "dependencies": {
     "sqlite3": "^5.1.7",
